--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Help New Haven residents find social services and benefits",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "db:generate": "prisma generate",
